@startuml
'To be displayed in a development environment, this PlantUML file may require a plugin,
'e.g. https://plugins.jetbrains.com/plugin/7017-plantuml-integration
'See https://plantuml.com/de/running

'https://plantuml.com/class-diagram

hide empty members

class BattleDisplay

class CasualtySelection

class UnitChooser {
    changedValue()
}

class UnitSeparator

class UnitCategory

class ChooserEntry {
}

class UnitChooserEntryIcon {
    paint()
}

class ScrollableTextField

class JComponent <<swing>>
class JOptionPane <<swing>>
class JPanel <<swing>>
class JScrollPane <<swing>>

skinparam class {
    BackgroundColor #FFFFCC
    BackgroundColor<<swing>> #DAE3F3
}

BattleDisplay "dialogParent" --> CasualtySelection : new

CasualtySelection *-- "chooser\n" UnitChooser
CasualtySelection --> JScrollPane : new
CasualtySelection *- JOptionPane

JScrollPane --> "view" UnitChooser
JOptionPane o- JScrollPane

JPanel <|- UnitChooser
UnitChooser -> UnitSeparator : new
UnitSeparator -> UnitCategory : new

UnitChooser *-- "entries" ChooserEntry


ChooserEntry *-"1" UnitCategory
ChooserEntry *-- "1..*" UnitChooserEntryIcon
ScrollableTextField <- ChooserEntry : new
JPanel <|-- ScrollableTextField
UnitChooser::changedValue <-- ScrollableTextField

JComponent <|- UnitChooserEntryIcon


note as N1
    This diagram shows relationships around CasualtySelection
    and UnitChooser and can provide orientation
    when refactoring this structure - e.g. in order to reduce the
    dependency to the AWT classes.

    21.Nov.2021
end note
@enduml